--- a/app/src/main/res/layout/activity_stud_notes.xml
+++ b/app/src/main/res/layout/activity_stud_notes.xml
@@ -15,11 +15,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Hello"
-            android:textSize="20sp"
+            android:text="Semester Notes"
+            android:textSize="25sp"
             android:layout_gravity="center"
             android:textColor="#000"
             android:id="@+id/title"
+            android:textStyle="bold"
             />
 
         <ListView
