--- a/app/src/main/res/layout/activity_stud_notes.xml
+++ b/app/src/main/res/layout/activity_stud_notes.xml
@@ -14,21 +14,23 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Semester Notes"
-            android:textSize="25sp"
+           android:layout_margin="15dp"
+            android:text="SEMESTER NOTES"
+            android:textSize="30sp"
             android:layout_gravity="center"
-            android:textColor="#000"
+            android:textColor="#0e816c"
             android:id="@+id/title"
             android:textStyle="bold"
+            android:fontFamily="sans-serif-smallcaps"
+
             />
 
         <ListView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:divider="@color/material_blue_grey_800"
-            android:dividerHeight="1dp"
-            android:listSelector="#BCD2"
+            android:dividerHeight="2dp"
+            android:listSelector="#b9f6ca"
             android:id="@+id/lv"/>
 
 
