--- a/app/src/main/res/layout/activity_fac_marks.xml
+++ b/app/src/main/res/layout/activity_fac_marks.xml
@@ -13,94 +13,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/marks"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Marks"
-            android:layout_gravity="center"
-            android:textSize="22dp"/>
-
-        <TextView
-            android:id="@+id/semtv"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Sem" />
-
-        <Spinner
-            android:id="@+id/sem"
-            android:layout_width="200dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="25dp"
-            android:dropDownWidth="200dp"
-            android:layout_gravity="center"/>
-
-        <TextView
-            android:id="@+id/subtv"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Subject Code" />
-
-        <Spinner
-            android:id="@+id/subcodes"
-            android:layout_width="200dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="25dp"
-            android:dropDownWidth="200dp"
-            android:layout_gravity="center"/>
-
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:id="@+id/rgrp">
-
-
-            <RadioButton
-                android:id="@+id/ia1"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:onClick="rbclick"
-                android:checked="true"
-                android:text="IA1" />
-
-            <RadioButton
-                android:id="@+id/ia2"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:onClick="rbclick"
-                android:text="IA2" />
-
-            <RadioButton
-                android:id="@+id/ia3"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:onClick="rbclick"
-                android:text="IA3" />
-        </RadioGroup>
-
+       <Button
+           android:id="@+id/upbtn"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Update Marks"/>
 
         <Button
-            android:id="@+id/gettbn"
+            android:id="@+id/vbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Get Student Details"
-            android:textSize="25dp"/>
-
-        <ListView
-            android:id="@+id/studlist"
-            android:layout_width="fill_parent"
-            android:layout_height="250px" />
-
+            android:text="View Marks"/>
     </LinearLayout>
 </ScrollView>
