--- a/app/src/main/res/layout/activity_fac__view__marks.xml
+++ b/app/src/main/res/layout/activity_fac__view__marks.xml
@@ -21,8 +21,17 @@
         android:layout_gravity="center"
         android:prompt="@string/spinner_title"/>
 
+    <Spinner
+        android:id="@+id/subjectcode_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:dropDownWidth="200dp"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:prompt="@string/spinner_title"/>
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/go"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
