--- a/app/src/main/res/layout/activity_fac_update_marks.xml
+++ b/app/src/main/res/layout/activity_fac_update_marks.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context="com.example.saipr.final_year_proj.FacUpdateMarks">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:id="@+id/ml"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <TextView
             android:id="@+id/marks"
@@ -99,7 +95,6 @@
         <ListView
             android:id="@+id/studlist"
             android:layout_width="fill_parent"
-            android:layout_height="250px" />
+            android:layout_height="match_parent" />
 
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
