--- a/app/src/main/res/layout/activity_stud_marks.xml
+++ b/app/src/main/res/layout/activity_stud_marks.xml
@@ -1,82 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.saipr.final_year_proj.StudMarksActivity">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/mtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="MARKS"
+        android:textAlignment="center"
+        android:textSize="40sp" />
+
+
+    <ListView
+        android:id="@+id/my_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:divider="#0d2ee9"
+        android:dividerHeight="1dp"/>
 
 
-
-
-
-        <TextView
-            android:id="@+id/mtitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="MARKS"
-            android:textAlignment="center"
-            android:textSize="40sp" />
-
-
-
-
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:id="@+id/rgrp">
-
-
-            <RadioButton
-                android:id="@+id/ia1"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:onClick="rbclick"
-                android:checked="true"
-                android:text="IA1" />
-
-            <RadioButton
-                android:id="@+id/ia2"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:onClick="rbclick"
-                android:text="IA2" />
-
-            <RadioButton
-                android:id="@+id/ia3"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:onClick="rbclick"
-                android:text="IA3" />
-        </RadioGroup>
-
-
-
-
-        <Button
-            android:id="@+id/submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="SUBMIT"
-            android:fontFamily="sans-serif-smallcaps"
-            android:textStyle="bold"
-            android:background="@drawable/button"
-            android:textColor="#fafafa"
-            android:textSize="20dp"
-            android:width="250dp"/>
-
-    </LinearLayout>
-
-
-</ScrollView>
+</LinearLayout>
