--- a/app/src/main/res/layout/activity_fac__view__marks.xml
+++ b/app/src/main/res/layout/activity_fac__view__marks.xml
@@ -19,16 +19,20 @@
         android:dropDownWidth="200dp"
         android:textAlignment="center"
         android:layout_gravity="center"
-        android:prompt="@string/spinner_title"/>
+        android:layout_margin="10dp"
+        android:prompt="@string/spinner_title"
+       />
 
     <Spinner
         android:id="@+id/subjectcode_spinner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dropDownWidth="200dp"
+        android:layout_margin="10dp"
         android:textAlignment="center"
         android:layout_gravity="center"
-        android:prompt="@string/spinner_title"/>
+        android:prompt="@string/spinner_title"
+       />
 
     <Button
         android:id="@+id/go"
