--- a/app/src/main/res/layout/activity_fac_update_marks.xml
+++ b/app/src/main/res/layout/activity_fac_update_marks.xml
@@ -12,50 +12,61 @@
             android:id="@+id/marks"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Marks"
+            android:text="MARKS"
             android:layout_gravity="center"
             android:textSize="22dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
 
         <TextView
             android:id="@+id/semtv"
-            android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
             android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:text="Sem" />
 
-        <Spinner
-            android:id="@+id/sem"
-            android:layout_width="200dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="25dp"
-            android:dropDownWidth="200dp"
-            android:layout_gravity="center"/>
-
-        <TextView
-            android:id="@+id/subtv"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Subject Code" />
+            <TextView
+                android:id="@+id/subtv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Subject Code"
+                android:textSize="20dp"
+                android:layout_marginLeft="110dp"/>
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+    <Spinner
+        android:id="@+id/sem"
+        android:layout_width="124dp"
+        android:layout_height="36dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:dropDownWidth="200dp" />
 
         <Spinner
             android:id="@+id/subcodes"
-            android:layout_width="200dp"
+            android:layout_width="124dp"
             android:layout_height="36dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="15dp"
             android:dropDownWidth="200dp"
-            android:layout_gravity="center"/>
+            android:layout_marginLeft="60dp"/>
+    </LinearLayout>
 
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:layout_gravity="center"
-            android:id="@+id/rgrp">
+            android:id="@+id/rgrp"
+            android:layout_margin="15dp">
 
 
             <RadioButton
@@ -64,7 +75,8 @@
                 android:layout_height="wrap_content"
                 android:onClick="rbclick"
                 android:checked="true"
-                android:text="IA1" />
+                android:text="IA1"
+                android:layout_marginLeft="15dp"/>
 
             <RadioButton
                 android:id="@+id/ia2"
@@ -72,7 +84,8 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:onClick="rbclick"
-                android:text="IA2" />
+                android:text="IA2"
+                android:layout_marginLeft="15dp"/>
 
             <RadioButton
                 android:id="@+id/ia3"
@@ -80,30 +93,43 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:onClick="rbclick"
-                android:text="IA3" />
+                android:text="IA3"
+                android:layout_marginLeft="15dp"/>
         </RadioGroup>
 
 
         <Button
             android:id="@+id/gettbn"
-            android:layout_width="wrap_content"
+            android:layout_width="329dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Get Student Details"
-            android:textSize="25dp"/>
+            android:textSize="25dp"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textStyle="bold"
+            android:background="@drawable/button"
+            android:textColor="#fafafa"
+           />
 
     <ListView
         android:id="@+id/studlist"
         android:layout_width="fill_parent"
-        android:layout_height="124dp"></ListView>
+        android:layout_height="124dp"
+        android:layout_margin="10dp"></ListView>
 
     <Button
         android:id="@+id/updatebtn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_below="@+id/updatebtn"
         android:layout_gravity="center"
-        android:text="Update" />
+        android:text="Update"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textStyle="bold"
+        android:background="@drawable/button"
+        android:textColor="#fafafa"
+        android:textSize="20dp"
+        android:layout_marginTop="70dp"/>
 
 
 </LinearLayout>
