--- a/app/src/main/res/layout/activity_placement.xml
+++ b/app/src/main/res/layout/activity_placement.xml
@@ -41,7 +41,8 @@
             android:textColor="#fafafa"
             android:background="@drawable/button"
             android:fontFamily="sans-serif-smallcaps"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tvcname"
