--- a/app/src/main/res/layout/content_faculty_dashboard.xml
+++ b/app/src/main/res/layout/content_faculty_dashboard.xml
@@ -45,6 +45,7 @@
                 android:layout_rowWeight="1"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="20dp"
+                android:id="@+id/attend"
                 >
 
                 <LinearLayout
