--- a/app/src/main/res/layout/activity_fac_update_marks.xml
+++ b/app/src/main/res/layout/activity_fac_update_marks.xml
@@ -114,7 +114,7 @@
     <ListView
         android:id="@+id/studlist"
         android:layout_width="fill_parent"
-        android:layout_height="124dp"
+        android:layout_height="200dp"
         android:layout_margin="10dp"></ListView>
 
     <Button
@@ -128,8 +128,7 @@
         android:textStyle="bold"
         android:background="@drawable/button"
         android:textColor="#fafafa"
-        android:textSize="20dp"
-        android:layout_marginTop="70dp"/>
+        android:textSize="20dp"/>
 
 
 </LinearLayout>
