--- a/app/src/main/res/layout/activity_about_fac.xml
+++ b/app/src/main/res/layout/activity_about_fac.xml
@@ -21,10 +21,15 @@
             android:layout_gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
+           android:layout_gravity="center_horizontal"
            android:layout_height="100dp">
-           <ImageView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent" />
+           <de.hdodenhof.circleimageview.CircleImageView
+               xmlns:app="http://schemas.android.com/apk/res-auto"
+               android:id="@+id/profile_image"
+               android:layout_width="200dp"
+               android:layout_height="200dp"
+               app:civ_border_width="1dp"
+               app:civ_border_color="#FF000000"/>
        </RelativeLayout>
 
 
