--- a/app/src/main/res/layout/activity_fac_attendance_update.xml
+++ b/app/src/main/res/layout/activity_fac_attendance_update.xml
@@ -22,13 +22,27 @@
         android:divider="#0d2ee9"
         android:dividerHeight="1dp"/>
 
+    <!--<Button-->
+        <!--android:id="@+id/attup"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:text="UPDATE"-->
+        <!--android:fontFamily="sans-serif-smallcaps"-->
+        <!--android:textStyle="bold"-->
+        <!--android:background="@drawable/button"-->
+        <!--android:textColor="#fafafa"-->
+        <!--android:textSize="20dp"-->
+        <!--android:width="250dp"/>-->
+
     <Button
-        android:id="@+id/attup"
+        android:id="@+id/capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:text="UPDATE"
+        android:text="Capture"
         android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
         android:background="@drawable/button"
