--- a/app/src/main/res/layout/activity_fac_attendance_update.xml
+++ b/app/src/main/res/layout/activity_fac_attendance_update.xml
@@ -25,32 +25,34 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="10dp">
     <Button
         android:id="@+id/attup"
-        android:layout_width="190dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginRight="190dp"
         android:text="UPDATE"
         android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
         android:background="@drawable/button"
         android:textColor="#fafafa"
         android:textSize="20dp"
-        android:width="250dp"/>
+        android:width="200dp"
+        />
 
     <Button
         android:id="@+id/capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text="Capture"
-        android:layout_marginLeft="190dp"
+        android:layout_marginLeft="200dp"
         android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
         android:background="@drawable/button"
         android:textColor="#fafafa"
         android:textSize="20dp"
-        android:width="250dp"/>
+        android:width="200dp"
+        />
     </RelativeLayout>
 </LinearLayout>
